# cmake-cookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_name }}/: CMakeLists.txt
{{ cookiecutter.project_name }}/app/: app.c  app.cpp
{{ cookiecutter.project_name }}/include/: README.md
{{ cookiecutter.project_name }}/include/{{ cookiecutter.library_name }}/: hello.h  hello.hpp
{{ cookiecutter.project_name }}/src/: hello.c  hello.cpp
{{ cookiecutter.project_name }}/tests/: test_hello.cpp
